# profession_hu_scraper

./: README.md  README.rst  pyproject.toml
profession_hu_scraper/: models.py  scraper.py
tests/: test_profession_hu_scraper.py
