[tool.poetry]
name = "profession_hu_scraper"
version = "0.1.0"
description = "scrape profession.hu, save jobs to db/xlsx"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.27.1"
SQLAlchemy = "^1.4.36"
XlsxWriter = "^3.0.3"
bs4 = "^0.0.1"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
